--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -2,3 +2,14 @@
 
 <h1>Login</h1>
 <p>Please login below.</p>
+
+    <%= form_for(:session) do |f| %>
+
+      <%= f.label :email %>
+      <%= f.email_field :email %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+
+      <%= f.submit "Log in" %>
+    <% end %>
