--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -5,11 +5,11 @@
 
     <%= form_for(:session) do |f| %>
 
-      <%= f.label :email %>
-      <%= f.email_field :email %>
+      <p><%= f.label :email %>
+      <%= f.email_field :email %></p>
 
-      <%= f.label :password %>
-      <%= f.password_field :password %>
+      <p><%= f.label :password %>
+      <%= f.password_field :password %></p>
 
       <%= f.submit "Log in" %>
     <% end %>
