Add validation for invalid email.

--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -32,3 +32,5 @@
 <%= link_to 'New Student', new_student_path %> |
 <%= link_to 'New Parent', new_parent_path %> |
 <%= link_to 'New Grade', new_grade_path %>
+
+<p><%= link_to 'Logout', logout_path, method: :delete %></p>
