Allow teachers to create new students, parents, teachers, and grades.

--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :student_id %><br>
     <%= f.number_field :student_id %>
   </div>
+  <div class="field">
+    <%= f.label :date %><br>
+    <%= f.date_field :date %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
