--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -18,9 +18,11 @@
         <td><%= grade.assignment_name %></td>
         <td><%= grade.grade %></td>
         <td><%= grade.student_id %></td>
-        <td><%= link_to 'Show', grade %></td>
-        <td><%= link_to 'Edit', edit_grade_path(grade) %></td>
-        <td><%= link_to 'Destroy', grade, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if session[:user_type] == "Teacher"%>
+          <td><%= link_to 'Show', grade %></td>
+          <td><%= link_to 'Edit', edit_grade_path(grade) %></td>
+          <td><%= link_to 'Destroy', grade, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -28,6 +30,8 @@
 
 <br>
 
-<%= link_to 'New Grade', new_grade_path %>
+<% if session[:user_type] == "Teacher"%>
+  <%= link_to 'New Grade', new_grade_path %>
+<% end %>
 
 <p><%= link_to 'Logout', logout_path, method: :delete %></p>
