--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,28 +3,43 @@
 <h1>Listing Students</h1>
 
 <table>
+  <% @students.each do |student| %>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Password digest</th>
-      <th>Teacher</th>
+      <th>Student Name</th>
+      <th>Student Email</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @students.each do |student| %>
       <tr>
         <td><%= student.name %></td>
         <td><%= student.email %></td>
-        <td><%= student.password_digest %></td>
-        <td><%= student.teacher_id %></td>
         <td><%= link_to 'Show', student %></td>
         <td><%= link_to 'Edit', edit_student_path(student) %></td>
         <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'New Grade', new_grade_path(student_id: student.id) %></td>
       </tr>
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Assignment Name</th>
+          <th>Grade</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <% student.grades.each do |grade| %>
+        <tr>
+          <td><%= grade.date %></td>
+          <td><%= grade.assignment_name %></td>
+          <td><%= grade.grade %></td>
+          <td><%= link_to 'Show', student %></td>
+          <td><%= link_to 'Edit', edit_student_path(student) %></td>
+          <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
     <% end %>
+  <% end %>
   </tbody>
 </table>
 
