--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -45,6 +45,9 @@
 
 <br>
 
-<%= link_to 'New Student', new_student_path %>
+<%= link_to 'New Student', new_student_path %> |
+<%= link_to 'New Teacher', new_teacher_path %> |
+<%= link_to 'New Parent', new_parent_path %>
+
 
 <p><%= link_to 'Logout', logout_path, method: :delete %></p>
