Allow teacher to create parent from dashboard and assume parent associated with selected student.

--- a/app/views/parents/_form.html.erb
+++ b/app/views/parents/_form.html.erb
@@ -23,10 +23,14 @@
     <%= f.label :password %><br>
     <%= f.text_field :password %>
   </div>
-  <div class="field">
-    <%= f.label :student_id %><br>
-    <%= f.number_field :student_id %>
-  </div>
+  <% if params[:student_id] %>
+    <%= f.hidden_field :student_id %>
+  <% else %>
+    <div class="field">
+      <%= f.label :student_id %><br>
+      <%= f.number_field :student_id %>
+    </div>
+  <% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
