--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -2,44 +2,61 @@
 
 <h1>Listing Students</h1>
 
-<table>
-  <% @students.each do |student| %>
-  <thead>
-    <tr>
-      <th>Student Name</th>
-      <th>Student Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+  <table>
+    <% @students.each do |student| %>
+    <thead>
       <tr>
-        <td><%= student.name %></td>
-        <td><%= student.email %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= link_to 'New Grade', new_grade_path(student_id: student.id) %></td>
+        <th>Student Name</th>
+        <th>Student Email</th>
+        <th colspan="3"></th>
       </tr>
-      <thead>
+    </thead>
+
+      <tbody>
         <tr>
-          <th>Date</th>
-          <th>Assignment Name</th>
-          <th>Grade</th>
-          <th colspan="3"></th>
+          <td><%= student.name %></td>
+          <td><%= student.email %></td>
+          <td><%= link_to 'Show', student %></td>
+          <td><%= link_to 'Edit', edit_student_path(student) %></td>
+          <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'New Grade', new_grade_path(student_id: student.id) %></td>
+          <td><%= link_to 'New Parent', new_parent_path(student_id: student.id) %></td>
         </tr>
-      </thead>
+    <thead>
+      <tr>
+        <th>Parent Name</th>
+        <th>Parent Email</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+      <% student.parents.each do |parent| %>
+        <tr>
+          <td><%= parent.name %></td>
+          <td><%= parent.email %></td>
+          <td><%= link_to 'Show', parent %></td>
+          <td><%= link_to 'Edit', edit_parent_path(parent) %></td>
+          <td><%= link_to 'Destroy', parent, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </thead>
+      <tr>
+        <th>Date</th>
+        <th>Assignment Name</th>
+        <th>Grade</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
       <% student.grades.each do |grade| %>
         <tr>
           <td><%= grade.date %></td>
           <td><%= grade.assignment_name %></td>
           <td><%= grade.grade %></td>
-          <td><%= link_to 'Show', student %></td>
-          <td><%= link_to 'Edit', edit_student_path(student) %></td>
-          <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Show', grade %></td>
+          <td><%= link_to 'Edit', edit_grade_path(grade) %></td>
+          <td><%= link_to 'Destroy', grade, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
+      <% end %>
     <% end %>
-  <% end %>
   </tbody>
 </table>
 
