--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
 <h1>Listing Students</h1>
 
@@ -63,8 +64,7 @@
 <br>
 
 <%= link_to 'New Student', new_student_path %> |
-<%= link_to 'New Teacher', new_teacher_path %> |
-<%= link_to 'New Parent', new_parent_path %>
-
+<%= link_to 'New Teacher', new_teacher_path %>
 
 <p><%= link_to 'Logout', logout_path, method: :delete %></p>
+</div>
