--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,70 +1,74 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-<h1>Listing Students</h1>
-
-  <table>
+  <h1 class="text-center">Students</h1>
     <% @students.each do |student| %>
-    <thead>
-      <tr>
-        <th>Student Name</th>
-        <th>Student Email</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
+      <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th class="success">Student Name</th>
+          <th class="success">Student Email</th>
+          <th></th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-      <tbody>
+        <tbody>
+          <tr>
+            <td><%= student.name %></td>
+            <td><%= student.email %></td>
+            <td><%=  %></td>
+            <td><%= link_to 'Show', student %></td>
+            <td><%= link_to 'Edit', edit_student_path(student) %></td>
+            <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+          <%= link_to 'New Grade', new_grade_path(student_id: student.id) %>|
+          <%= link_to 'New Parent', new_parent_path(student_id: student.id) %>
+      <thead>
         <tr>
-          <td><%= student.name %></td>
-          <td><%= student.email %></td>
-          <td><%= link_to 'Show', student %></td>
-          <td><%= link_to 'Edit', edit_student_path(student) %></td>
-          <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <td><%= link_to 'New Grade', new_grade_path(student_id: student.id) %></td>
-          <td><%= link_to 'New Parent', new_parent_path(student_id: student.id) %></td>
+          <th class="success">Parent Name</th>
+          <th class="success">Parent Email</th>
+          <th colspan="3"></th>
         </tr>
-    <thead>
-      <tr>
-        <th>Parent Name</th>
-        <th>Parent Email</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-      <% student.parents.each do |parent| %>
+      </thead>
+        <% student.parents.each do |parent| %>
+          <tr>
+            <td><%= parent.name %></td>
+            <td><%= parent.email %></td>
+            <td><%=  %></td>
+            <td><%= link_to 'Show', parent %></td>
+            <td><%= link_to 'Edit', edit_parent_path(parent) %></td>
+            <td><%= link_to 'Destroy', parent, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </thead>
         <tr>
-          <td><%= parent.name %></td>
-          <td><%= parent.email %></td>
-          <td><%= link_to 'Show', parent %></td>
-          <td><%= link_to 'Edit', edit_parent_path(parent) %></td>
-          <td><%= link_to 'Destroy', parent, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <th class="success">Date</th>
+          <th class="success">Assignment Name</th>
+          <th class="success">Grade</th>
+          <th colspan="3"></th>
         </tr>
+      </thead>
+        <% student.grades.each do |grade| %>
+          <tr>
+            <td><%= grade.date %></td>
+            <td><%= grade.assignment_name %></td>
+            <td><%= grade.grade %></td>
+            <td><%= link_to 'Show', grade %></td>
+            <td><%= link_to 'Edit', edit_grade_path(grade) %></td>
+            <td><%= link_to 'Destroy', grade, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
       <% end %>
-    </thead>
-      <tr>
-        <th>Date</th>
-        <th>Assignment Name</th>
-        <th>Grade</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-      <% student.grades.each do |grade| %>
-        <tr>
-          <td><%= grade.date %></td>
-          <td><%= grade.assignment_name %></td>
-          <td><%= grade.grade %></td>
-          <td><%= link_to 'Show', grade %></td>
-          <td><%= link_to 'Edit', edit_grade_path(grade) %></td>
-          <td><%= link_to 'Destroy', grade, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
 
-<%= link_to 'New Student', new_student_path %> |
-<%= link_to 'New Teacher', new_teacher_path %>
 
-<p><%= link_to 'Logout', logout_path, method: :delete %></p>
+  <br>
+
+  <%= link_to 'New Student', new_student_path %> |
+  <%= link_to 'New Teacher', new_teacher_path %>
+
+  <p><%= link_to 'Logout', logout_path, method: :delete %></p>
 </div>
