Add minor styling to all forms for creating new instances.

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-  <p class="text-right"><%= link_to 'Logout', logout_path, method: :delete %></p>  
+  <p class="text-right"><%= link_to 'Logout', logout_path, method: :delete %></p>
 
-  <h1 class="text-center">Students</h1>
+  <h1 class="text-center">Student Dashboard</h1>
     <% @students.each do |student| %>
       <table class="table table-bordered">
       <thead>
