--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -1,37 +1,39 @@
-<%= form_for(@grade) do |f| %>
-  <% if @grade.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@grade.errors.count, "error") %> prohibited this grade from being saved:</h2>
+<div class="container">
+  <%= form_for(@grade) do |f| %>
+    <% if @grade.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@grade.errors.count, "error") %> prohibited this grade from being saved:</h2>
 
-      <ul>
-      <% @grade.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+        <ul>
+        <% @grade.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-  <div class="field">
-    <%= f.label :assignment_name %><br>
-    <%= f.text_field :assignment_name %>
-  </div>
-  <div class="field">
-    <%= f.label :grade %><br>
-    <%= f.number_field :grade %>
-  </div>
-  <% if params[:student_id] %>
-    <%= f.hidden_field :student_id %>
-  <% else %>
     <div class="field">
-      <%= f.label :student_id %><br>
-      <%= f.number_field :student_id %>
+      <%= f.label :assignment_name %><br>
+      <%= f.text_field :assignment_name %>
+    </div>
+    <div class="field">
+      <%= f.label :grade %><br>
+      <%= f.number_field :grade %>
+    </div>
+    <% if params[:student_id] %>
+      <%= f.hidden_field :student_id %>
+    <% else %>
+      <div class="field">
+        <%= f.label :student_id %><br>
+        <%= f.number_field :student_id %>
+      </div>
+    <% end %>
+    <div class="field">
+      <%= f.label :date %><br>
+      <%= f.date_field :date %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
     </div>
   <% end %>
-  <div class="field">
-    <%= f.label :date %><br>
-    <%= f.date_field :date %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
