--- a/app/views/grades/new.html.erb
+++ b/app/views/grades/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Grade</h1>
+<div class="container">
+  <h1>New Grade</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', grades_path %>
+  <%= link_to 'Back', grades_path %>
+
+</div>
