--- a/app/views/parents/_form.html.erb
+++ b/app/views/parents/_form.html.erb
@@ -1,37 +1,39 @@
-<%= form_for(@parent) do |f| %>
-  <% if @parent.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@parent.errors.count, "error") %> prohibited this parent from being saved:</h2>
+<div class="container">
+  <%= form_for(@parent) do |f| %>
+    <% if @parent.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@parent.errors.count, "error") %> prohibited this parent from being saved:</h2>
 
-      <ul>
-      <% @parent.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+        <ul>
+        <% @parent.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br>
-    <%= f.text_field :password %>
-  </div>
-  <% if params[:student_id] %>
-    <%= f.hidden_field :student_id %>
-  <% else %>
     <div class="field">
-      <%= f.label :student_id %><br>
-      <%= f.number_field :student_id %>
+      <%= f.label :name %><br>
+      <%= f.text_field :name %>
+    </div>
+    <div class="field">
+      <%= f.label :email %><br>
+      <%= f.text_field :email %>
+    </div>
+    <div class="field">
+      <%= f.label :password %><br>
+      <%= f.text_field :password %>
+    </div>
+    <% if params[:student_id] %>
+      <%= f.hidden_field :student_id %>
+    <% else %>
+      <div class="field">
+        <%= f.label :student_id %><br>
+        <%= f.number_field :student_id %>
+      </div>
+    <% end %>
+    <div class="actions">
+      <%= f.submit %>
     </div>
   <% end %>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
