--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Teacher</h1>
+<div class="container">
+  <h1>New Teacher</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', teachers_path %>
+  <%= link_to 'Back', teachers_path %>
+</div>
