--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,16 +1,18 @@
 <p id="notice"><%= notice %></p>
 <p id="alert"><%= alert %></p>
 
-<h1>Login</h1>
-<p>Please login below.</p>
+<div class="container">
+  <h1>Login</h1>
+  <p>Please login below.</p>
 
-    <%= form_tag(session_create_path) do %>
+      <%= form_tag(session_create_path) do %>
 
-      <p><%= label_tag :email %>
-      <%= email_field_tag :email %></p>
+        <p><%= label_tag :email %>
+        <%= email_field_tag :email %></p>
 
-      <p><%= label_tag :password %>
-      <%= password_field_tag :password %></p>
+        <p><%= label_tag :password %>
+        <%= password_field_tag :password %></p>
 
-      <%= submit_tag "Log in" %>
-    <% end %>
+        <%= submit_tag "Log in" %>
+      <% end %>
+</div>      
