--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -12,7 +12,9 @@
 
         <p><%= label_tag :password %>
         <%= password_field_tag :password %></p>
+        <p><%= link_to 'Forgot Password', password_reset_new_path %></td>
+
 
         <%= submit_tag "Log in" %>
       <% end %>
-</div>      
+</div>
